# signaturer

./: CMakeLists.txt  README.md  signaturer.cpp  signaturer.h  veeam_test_task.cpp  veeam_test_task_boost_tests.cpp
